fix api responses
